Fixing bug 267664. SVG <a> element hack is painfully broken - implement it properly. r=tor@acm.org, sr=jonas@sicking.cc